hphp/hack/test/typecheck/strict_switch/union_enums.php.new_exhaustivity.exp
ERROR: File "union_enums.php", line 30, characters 3-93:
This `switch` statement is nonexhaustive. At least the following cases are missing: `IntEnumAB::B`, `IntEnumCD::C` (Typing[4019])
  File "union_enums.php", line 30, characters 11-12:
  The scrutinee has type `(IntEnumAB | IntEnumCD)`.
ERROR: File "union_enums.php", line 47, characters 3-93:
This `switch` statement is nonexhaustive. At least the following cases are missing: `IntEnumCD::C`, `IntEnumCD::D` (Typing[4019])
  File "union_enums.php", line 47, characters 11-12:
  The scrutinee has type `(IntEnumAB | IntEnumCD)`.
